fixed styling for button + perks

--- a/index.html
+++ b/index.html
@@ -22,12 +22,13 @@
     <main>
       <div class="pricing-container">
         <h4>100K Pageviews</h4>
-        <h4><span class="price">$16</span>/month</h4>
-      </div>
 
-      <div class="slider-container">
-        <input type="range" min="0" max="100" value="0" class="slider">
-        <img src="images/icon-slider.svg" alt="slider">
+
+        <div class="slider-container">
+          <input type="range" min="0" max="100" value="0" class="slider">
+        </div>
+
+        <p><span class="price">$16.00</span>/month</p>
       </div>
       
       <div class="billing">
