--- a/index.html
+++ b/index.html
@@ -21,19 +21,22 @@
     
     <main>
       <div class="pricing-container">
-        <h4>100K Pageviews</h4>
-
+        <h4 class="viewamnt">100K Pageviews</h4>
 
         <div class="slider-container">
-          <input type="range" min="0" max="100" value="0" class="slider">
+          <input type="range" min="8" max="36" value="16" class="slider">
         </div>
 
         <p><span class="price">$16.00</span>/month</p>
       </div>
       
-      <div class="billing">
-        Monthly Billing
-        Yearly Billing 25% discount
+      <div class="billing-container">
+        <p>Monthly Billing</p>
+        <label class="switch">
+          <input type="checkbox">
+          <span class="billing-slider round"></span>
+        </label>
+        <p>Yearly Billing</p>
       </div>
 
       <div class=lower-container>
@@ -61,5 +64,7 @@
 
     </main>
   </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
